[gd_scene load_steps=8 format=3 uid="uid://djoe2eg5c0ckb"]

[ext_resource type="Script" path="res://Scenes/tutorial_level_0/tutorial_0.gd" id="1_nueqr"]
[ext_resource type="Texture2D" uid="uid://bq8arwc8uwrp1" path="res://imgs/1f5d7f566145ab4361f31a36ba80bb3.jpg" id="2_asyja"]
[ext_resource type="FontFile" uid="uid://djxmwln40ig66" path="res://fonts/Geo-Regular.ttf" id="2_yvnqr"]
[ext_resource type="Material" uid="uid://bl6bvg6m8lab0" path="res://shaders/crt_shader.tres" id="4_jinde"]
[ext_resource type="Script" path="res://Scenes/menu_button.gd" id="4_ru7i5"]
[ext_resource type="AudioStream" uid="uid://d21tn6mxl1rmc" path="res://audio/click_sounds/Click_Electronic_03.mp3" id="5_jt2ca"]
[ext_resource type="AudioStream" uid="uid://cdy0uy4q3ejn5" path="res://audio/click_sounds/Click_Electronic_15.mp3" id="6_8fqkf"]

[node name="Level0Complete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 5.0
offset_right = -2.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nueqr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -295.0
offset_top = -107.0
offset_right = 2255.0
offset_bottom = 3193.0
texture = ExtResource("2_asyja")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 881.0
offset_top = 484.0
offset_right = 1648.0
offset_bottom = 608.0
theme_override_fonts/font = ExtResource("2_yvnqr")
theme_override_font_sizes/font_size = 90
text = "Phase 1 Complete!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 624.0
offset_top = 655.0
offset_right = 1945.0
offset_bottom = 809.0
theme_override_fonts/font = ExtResource("2_yvnqr")
theme_override_font_sizes/font_size = 100
text = "Please Proceed to enemy training"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
material = ExtResource("4_jinde")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Next" type="Button" parent="."]
layout_mode = 0
offset_left = 580.0
offset_top = 800.0
offset_right = 860.0
offset_bottom = 940.0
theme_override_fonts/font = ExtResource("2_yvnqr")
theme_override_font_sizes/font_size = 90
text = "Next"
script = ExtResource("4_ru7i5")

[node name="Leave" type="Button" parent="."]
layout_mode = 0
offset_left = 1050.0
offset_top = 800.0
offset_right = 1330.0
offset_bottom = 940.0
pivot_offset = Vector2(0, 800)
theme_override_fonts/font = ExtResource("2_yvnqr")
theme_override_font_sizes/font_size = 90
text = "Menu"
script = ExtResource("4_ru7i5")

[node name="ClickGood" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jt2ca")

[node name="ClickBack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8fqkf")

[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_leave_pressed"]
